# transcriber

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  transcriber.code-workspace
api/: Dockerfile  pyproject.toml
api/src/api/: __init__.py  main.py
api/src/api/routes/: transcriptions.py  workers.py
backend/: Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260308_000001_baseline_schema.py  20260308_000002_add_speaker_artifacts.py
backend/src/api/: main.py  schemas.py
backend/src/api/routes/: transcriptions.py  workers.py
backend/src/infra/: config.py  db.py  ids.py  models.py
backend/src/services/: jobs.py  speakers.py  storage.py  transcript_assembly.py  transcriptions.py  uploads.py  workers.py
backend/src/worker/: diarization.py  engine.py  main.py  pipeline.py  pipeline_types.py  whisperx_pipeline.py
backend/tests/integration/: conftest.py  test_api_transcriptions.py  test_api_workers.py  test_container_commands.md  test_import_smoke.py  test_job_lifecycle.py  test_migrations.py  test_worker_runtime.py  test_worker_visibility.py
backend/tests/unit/: test_config.py  test_diarization.py  test_engine.py  test_ids.py  test_jobs.py  test_speakers.py  test_transcript_assembly.py  test_uploads.py  test_workers.py
docs/plans/: 2026-03-08-backend-architecture-refactor-design.md  2026-03-08-backend-architecture-refactor.md  2026-03-08-backend-remediation-plan.md  2026-03-08-dark-iterations-design.md  2026-03-08-dark-iterations-plan.md  2026-03-08-frontend-design.md  2026-03-08-frontend-plan.md  2026-03-08-frontend-v2-design.md  2026-03-08-frontend-v2-plan.md  2026-03-08-speaker-diarization-plan.md  2026-03-08-transcript-turn-ui-design.md  2026-03-08-transcript-turn-ui-plan.md  2026-03-08-transcription-app-design.md  2026-03-08-transcription-app-plan.md  2026-03-08-turn-only-transcription-response-design.md  2026-03-08-turn-only-transcription-response.md  2026-03-08-whisperx-backend-migration-plan.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
shared/: pyproject.toml
shared/src/shared/: __init__.py  config.py  db.py  models.py  schemas.py
worker/: Dockerfile  pyproject.toml
worker/src/worker/: __init__.py  consumer.py  main.py  transcriber.py
worker/src/worker/engines/: __init__.py  faster_whisper.py
(+62 files in other folders)
