[project]
name = "api"
version = "0.1.0"
description = "FastAPI HTTP backend for transcription app"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
