[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.14",
]

[project.optional-dependencies]
worker = [
    "whisperx",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
    "src/services",
    "src/infra",
    "src/worker",
]
